# intel-unnati

./: .gitignore  DESIGN.md  Dockerfile  INSTALLATION.md  PROJECT_COMPLETE.md  README.md  TECH_STACK.md  api_test_report.json  complete_demo.py  complete_demo_report.json  docker-compose.yml  example_complete_framework.py  install_framework.py  intel_validation_report.json  pyproject.toml  quick_test.py  requirements-apache.txt  requirements-core.txt  requirements-dev.txt  requirements-intel.txt  requirements.txt  run_framework.py  setup.py  system_verification.py  system_verification_report.json  test_api_endpoints.py  validate_intel_local.py
.github/: WORKFLOWS_GUIDE.md  markdown-link-check.json
.github/workflows/: ci-cd-old.yml  ci-cd.yml  documentation.yml  performance.yml  release.yml  security-old.yml  security.yml
ai_agent_framework/: __init__.py
ai_agent_framework/apache_integration/: __init__.py  airflow_integration.py  camel_integration.py  kafka_integration.py
ai_agent_framework/benchmarks/: __init__.py  benchmark_suite.py
ai_agent_framework/core/: agent.py  memory.py  task.py  workflow.py
ai_agent_framework/intel_optimizations/: __init__.py  devcloud_integration.py  neural_compressor.py  openvino_optimizer.py  pytorch_optimizer.py
ai_agent_framework/monitoring/: logger.py  logging.py  metrics.py
ai_agent_framework/orchestration/: dag_engine.py  scheduler.py
ai_agent_framework/reference_agents/: __init__.py  data_analyzer.py  document_processor.py
ai_agent_framework/sdk/: __init__.py  api.py
examples/: custom_tools_example.py  simple_example.py  standalone_demo.py
examples/customer_support_agent/: config.yaml  run_agent.py
examples/document_processing_agent/: run_agent.py
scripts/: init_framework.py  init_framework.sh  update_actions.py
src/: __init__.py
src/core/: __init__.py  agents.py  config.py  exceptions.py  state_machine.py  workflow.py
src/tools/: __init__.py  document_tools.py  support_tools.py
tests/integration/: test_integration.py
tests/unit/: test_agents.py
