[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-framework"
version = "0.1.0"
description = "A comprehensive AI Agent framework for orchestrating agentic workflows"
authors = [
    {name = "AI Agent Framework Team", email = "team@aiagentframework.dev"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "agents", "workflow", "orchestration", "intel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "asyncio-mqtt>=0.11.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "apache-airflow>=2.7.0",
    "kafka-python>=2.0.2",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "structlog>=23.1.0",
    "openvino>=2023.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
]

[project.urls]
Homepage = "https://github.com/ai-agent-framework/ai-agent-framework"
Documentation = "https://ai-agent-framework.readthedocs.io"
Repository = "https://github.com/ai-agent-framework/ai-agent-framework"
Issues = "https://github.com/ai-agent-framework/ai-agent-framework/issues"

[project.scripts]
ai-agent-framework = "ai_agent_framework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent_framework*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ai_agent_framework --cov-report=html --cov-report=term-missing"